--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,12 @@
 version: '3.8'
 services:
   db:
-    image: postgres:14.1-alpine
-    restart: always
+    image: postgres:14.5-alpine
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=mypass
-      - POSTGRES_DB=avitoSegmentsDb
-      - POSTGRES_HOST=localhost
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: avitoSegmentsDb
     ports:
       - '5432:5432'
     volumes:
-      - db:/var/lib/postgresql/data
-volumes:
-  db:
-    driver: local
+      - /var/lib/postgresql/data
