added docker support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,19 @@
 version: '3.8'
+
 services:
+#  app:
+#    build:
+#      target: build
+#    restart: on-failure
+#    depends_on:
+#      - db
+#    environment:
+#      - DB_PASSWORD=mypassword
+#    ports:
+#      - "8080:8080"
   db:
     image: postgres:14.5-alpine
+    restart: on-failure
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: mypassword
@@ -9,4 +21,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - /var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
+volumes:
+  db-data:
+    driver: local
