--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
 version: '3.8'
 
 services:
-#  app:
-#    build:
-#      target: build
-#    restart: on-failure
-#    depends_on:
-#      - db
-#    environment:
-#      - DB_PASSWORD=mypassword
-#    ports:
-#      - "8080:8080"
+  app:
+    build:
+      target: build
+    restart: on-failure
+    depends_on:
+      - db
+    environment:
+      - DB_HOST=db
+      - DB_PASSWORD=mypassword
+    ports:
+      - "8080:8080"
+    networks:
+      - segment
   db:
     image: postgres:14.5-alpine
     restart: on-failure
     environment:
+      POSTGRES_HOST: localhost
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: avitoSegmentsDb
@@ -22,6 +26,13 @@ services:
       - '5432:5432'
     volumes:
       - db-data:/var/lib/postgresql/data
+    networks:
+      - segment
+
 volumes:
   db-data:
     driver: local
+
+networks:
+  segment:
+    driver: bridge
