--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      target: build
-    restart: on-failure
-    depends_on:
-      - db
-    environment:
-      - DB_HOST=db
-      - DB_PASSWORD=mypassword
-    ports:
-      - "8080:8080"
-    networks:
-      - segment
+#  app:
+#    build:
+#      target: build
+#    restart: on-failure
+#    depends_on:
+#      - db
+#    environment:
+#      - DB_HOST=db
+#      - DB_PASSWORD=mypassword
+#    ports:
+#      - "8080:8080"
+#    networks:
+#      - segment
   db:
     image: postgres:14.5-alpine
     restart: on-failure
